text box overflow fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@ color: white;
 }
 #user-input {
     width: 120px;
+    overflow: hidden;
 }
 .rating {
     margin: 0px 12px 0px 12px;
